# arc89

./: .algokit.toml  .env.localnet.template  .env.testnet.template  .pre-commit-config.yaml  README.md  pyproject.toml
.algokit/: .copier-answers.yml
.devin/: wiki.json
.github/workflows/: arc89-cd.yaml  arc89-ci.yaml
notebooks/: sdk_demo.ipynb
smart_contracts/: __main__.py  asa_validation.py  avm_common.py  avm_library.py  constants.py  template_vars.py
smart_contracts/artifacts/asa_example/: arc3_bond.json  arc3_pure_nft.json
smart_contracts/artifacts/asa_metadata_registry/: AsaMetadataRegistry.approval.puya.map  AsaMetadataRegistry.approval.teal  AsaMetadataRegistry.arc56.json  (+1 more)
smart_contracts/asa_metadata_registry/: abi_types.py  arc89_interface.py  bitmasks.py  constants.py  contract.py  deploy_config.py  enums.py  errors.py  flags.py  interface.py  template_vars.py
src/: __init__.py  algod.py  app_client.py  codec.py  deployments.py  errors.py  hashing.py  models.py  registry.py  validation.py
src/_generated/: __init__.py
src/asa_metadata_registry/: __init__.py  algod.py  app_client.py  bitmasks.py  codec.py  constants.py  deployments.py  enums.py  errors.py  flags.py  hashing.py  migrate.py  models.py  registry.py  validation.py
src/read/: __init__.py  avm.py  box.py  reader.py
src/write/: __init__.py  writer.py
tests/: asa_metadata_registry_client_test.py  conftest.py  test_arc89_check_metadata_exists.py  test_arc89_create_metadata.py  test_arc89_delete_metadata.py  test_arc89_get_metadata.py  test_arc89_get_metadata_b64_bytes_by_key.py  test_arc89_get_metadata_hash.py  test_arc89_get_metadata_header.py  test_arc89_get_metadata_header_hash.py  test_arc89_get_metadata_mbr_delta.py  test_arc89_get_metadata_object_by_key.py  test_arc89_get_metadata_page_hash.py  test_arc89_get_metadata_pagination.py  test_arc89_get_metadata_partial_uri.py  test_arc89_get_metadata_slice.py  test_arc89_get_metadata_string_by_key.py  test_arc89_get_metadata_uint64_by_key.py  test_arc89_is_metadata_immutable.py  test_arc89_is_metadata_short.py  test_arc89_migrate_metadata.py  test_arc89_replace_metadata.py  test_arc89_replace_metadata_larger.py  test_arc89_replace_metadata_slice.py  test_arc89_set_immutable.py  test_arc89_set_irreversible_flag.py  test_arc89_set_reversible_flag.py  test_asset_metadata_factory.py  test_constants.py  test_create.py  test_deploy.py  test_metadata_size_fixtures.py  test_per_page_op_budget_calibration.py
tests/helpers/: bitmasks.py  factories.py  utils.py
tests/sdk/: __init__.py  test_algod.py  test_codec.py  test_constants.py  test_deployments.py  test_hashing.py  test_migrate.py  test_models_box.py  test_models_comprehensive.py  test_models_flags.py  test_models_helpers.py  test_models_json.py  test_models_metadata.py  test_reader.py  test_reader_integration.py  test_registry.py  test_validation.py  test_writer.py  test_writer_integration.py
tests/smart_contract/: __init__.py  test_arc89_check_metadata_exists.py  test_arc89_create_metadata.py  test_arc89_delete_metadata.py  test_arc89_extra_payload.py  test_arc89_get_metadata.py  test_arc89_get_metadata_b64_bytes_by_key.py  test_arc89_get_metadata_hash.py  test_arc89_get_metadata_header.py  test_arc89_get_metadata_header_hash.py  test_arc89_get_metadata_mbr_delta.py  test_arc89_get_metadata_object_by_key.py  test_arc89_get_metadata_page_hash.py  test_arc89_get_metadata_pagination.py  test_arc89_get_metadata_partial_uri.py  test_arc89_get_metadata_registry_parameters.py  test_arc89_get_metadata_slice.py  test_arc89_get_metadata_string_by_key.py  test_arc89_get_metadata_uint64_by_key.py  test_arc89_is_metadata_immutable.py  test_arc89_is_metadata_short.py  test_arc89_migrate_metadata.py  test_arc89_replace_metadata.py  test_arc89_replace_metadata_larger.py  test_arc89_replace_metadata_slice.py  test_arc89_set_immutable.py  test_arc89_set_irreversible_flag.py  test_arc89_set_reversible_flag.py  test_deploy.py  test_per_page_op_budget_calibration.py  test_withdraw_balance_excess.py
(+5 files in other folders)
