[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asa-metadata-registry"
description = "ASA Metadata Registry (ARC-89) reference implementation and SDK"
version = "0.7.0"
authors = [{ name = "Cosimo Bassi", email = "cosimo.bassi@algorand.foundation" }]
readme = "README.md"
keywords = [ "algorand", "asa", "metadata", "arc89" ]
requires-python = ">=3.10,<4"
dependencies = [
  "algokit-utils>=4.2.3,<5.0.0",
]

[project.urls]
repository = "https://github.com/algorandfoundation/arc89"

[tool.poetry.group.contracts.dependencies]
algokit-client-generator = "^2.2.0"
algorand-python = { version = "==3.3.0", python = ">=3.12,<4" }
black = "^25.12.0"
ruff = "^0.14.10"
mypy = "^1.19.1"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
python-dotenv = "^1.0.0"
pip = "^25.3"
pip-audit = "^2.10.0"
pre-commit = "^4.5.1"
puyapy = { version = "==5.6.0", python = ">=3.12,<4" }
urllib3 = "^2.6.2"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["asa_metadata_registry*"]

[tool.setuptools.package-data]
asa_metadata_registry = ["py.typed"]

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "ANN", "UP", "N", "C4", "B", "A", "YTT", "W", "FBT", "Q", "RUF", "I"]
lint.ignore = ["ANN401"]
lint.unfixable = ["B", "RUF"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.pytest.ini_options]
pythonpath = ["smart_contracts", "tests"]

[tool.mypy]
files = ["smart_contracts/", "src/"]
python_version = "3.10"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
extra_checks = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
untyped_calls_exclude = ["algosdk"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_any_expr = false

[[tool.mypy.overrides]]
module = "src.*"
disallow_any_expr = false
disallow_any_explicit = false
